src/objects/Lcm_Module__c.object
<CustomObject>
    <description>Salesforce Module (CRM TV, NBT, Ventutres..)</description>
    <fields>
        <fullName>Lcm_Description__c</fullName>
        <description>Beschreibung des Moduls</description>
        <inlineHelpText>Beschreibung des Moduls</inlineHelpText>
        <label>Beschreibung</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Lcm_ModuleName__c</fullName>
        <description>Name des Moduls</description>
        <inlineHelpText>Name des Moduls</inlineHelpText>
        <label>Modul-Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Lcm_TestSphere__c</fullName>
        <description>Zuordnung zu einer Test-Sphäre, die Zugriffsrechte für User im LCM Test steuert</description>
        <inlineHelpText>Zuordnung zu einer Test-Sphäre, die Zugriffsrechte für User im LCM Test steuert</inlineHelpText>
        <label>Test-Sphäre</label>
        <picklist>
            <picklistValues>
                <fullName>Lcm</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Se</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SomDig</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ven</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Modul</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Lcm_ModuleName__c</columns>
        <columns>Lcm_Description__c</columns>
        <columns>Lcm_TestSphere__c</columns>
        <columns>OWNER.LAST_NAME</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Alle</label>
        <language>de</language>
    </listViews>
    <nameField>
        <displayFormat>MO-{0000}</displayFormat>
        <label>Modul-Nr</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Module</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>